--- a/css/content.css
+++ b/css/content.css
@@ -133,28 +133,15 @@
 
 /*____________ admin page _______________*/
 .dokuwiki ul.admin_tasks li {
-	padding-left: 30px;
+	list-style: none;
 }
-.dokuwiki ul.admin_tasks li.admin_acl {
-  background-image: url(images/admin/acl.png);
+ul.admin_tasks span.icon {
+	padding-right: 0.2em;
+	position: relative;
+	top: 0.2em;
 }
-.dokuwiki ul.admin_tasks li.admin_usermanager {
-  background-image: url(images/admin/usermanager.png);
-}
-.dokuwiki ul.admin_tasks li.admin_plugin {
-  background-image: url(images/admin/plugin.png);
-}
-.dokuwiki ul.admin_tasks li.admin_config {
-  background-image: url(images/admin/config.png);
-}
-.dokuwiki ul.admin_tasks li.admin_styling {
-  background-image: url(images/admin/styling.png);
-}
-.dokuwiki ul.admin_tasks li.admin_revert {
-  background-image: url(images/admin/revert.png);
-}
-.dokuwiki ul.admin_tasks li.admin_popularity {
-  background-image: url(images/admin/popularity.png);
+div#admin__version {
+	text-align: right;
 }
 
 /* _____________ Editor _________________*/
