--- a/css/design.css
+++ b/css/design.css
@@ -163,6 +163,11 @@
 /* toc
 ********************************************************************/
 
+.dokuwiki #dw__toc {
+  width: auto;
+	min-width: 10em;
+	max-width: 20em;
+}
 .dokuwiki #dw__toc h3.toggle {
 	font-size: 0.9rem;
 	margin-bottom: 0;
