make wide tables scrollable

--- a/css/content.css
+++ b/css/content.css
@@ -39,6 +39,9 @@
 }
 
 /*____________ tables ____________*/
+.dokuwiki div.table {
+  overflow-x: scroll;
+}
 .dokuwiki table.inline {
   min-width: 50%;
 }
