--- a/css/adminpage.css
+++ b/css/adminpage.css
@@ -1,25 +1,10 @@
 /*____________ admin page _______________*/
-.dokuwiki ul.admin_tasks li {
-	padding-left: 30px;
+.dokuwiki div.ui-admin ul li a span.icon {
+	width: 1.5em;
+	min-height: 1.5em;
+	margin: 0 0.5em;
+	vertical-align: middle;
 }
-.dokuwiki ul.admin_tasks li.admin_acl {
-  background-image: url(images/admin/acl.png);
-}
-.dokuwiki ul.admin_tasks li.admin_usermanager {
-  background-image: url(images/admin/usermanager.png);
-}
-.dokuwiki ul.admin_tasks li.admin_plugin {
-  background-image: url(images/admin/plugin.png);
-}
-.dokuwiki ul.admin_tasks li.admin_config {
-  background-image: url(images/admin/config.png);
-}
-.dokuwiki ul.admin_tasks li.admin_styling {
-  background-image: url(images/admin/styling.png);
-}
-.dokuwiki ul.admin_tasks li.admin_revert {
-  background-image: url(images/admin/revert.png);
-}
-.dokuwiki ul.admin_tasks li.admin_popularity {
-  background-image: url(images/admin/popularity.png);
+.dokuwiki div.ui-admin ul li a span.icon svg path {
+	fill: #333;
 }
