--- a/css/design.css
+++ b/css/design.css
@@ -4,6 +4,7 @@
  *
  * @author Anika Henke <anika@selfthinker.org>
  * @author Andreas Gohr <andi@splitbrain.org>
+ * @author Klaus Vormweg <klaus.vormweg@gmx.de>
  */
 
 
