--- a/css/mobile.css
+++ b/css/mobile.css
@@ -2,6 +2,7 @@
  * This file provides style changes for small screens.
  *
  * @author Anika Henke <anika@selfthinker.org>
+ * @author Klaus Vormweg <klaus.vormweg@gmx.de>
  */
 
 @media only screen and (max-width: 1023px) {
