--- a/css/structure.css
+++ b/css/structure.css
@@ -2,6 +2,7 @@
  * This file provides styles for the general layout structure.
  *
  * @author Anika Henke <anika@selfthinker.org>
+ * @author Klaus Vormweg <klaus.vormweg@gmx.de>
  */
 
 #dokuwiki__site {
