--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,10 @@
-/* a11y */
+/**
+ * This file provides the styles for the hamburger menu.
+ * inspired by Austin Wulf
+ * https://www.sitepoint.com/pure-css-off-screen-navigation-menu/
+ *
+ * @author Klaus Vormweg <klaus.vormweg@gmx.de>
+ */
 div.dokuwiki .vishelp {
   display: none;
 }
